# godot-cross-language-template

./: .cc-format.jsonc  .clang-format  .cz.toml  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  SConstruct  project.godot  pyproject.toml
.agents/skills/readme-localization-sync/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  make_build.yml
cmake/: AddGDExtensionLibrary.cmake  AddGDExtensionTarget.cmake  AppendGDExtensionDocSource.cmake  GDExtensionTargetLinkDocs.cmake  GenGDExtensionFile.cmake  WriteGDExtensionFile.cmake  WriteGDExtensionManifest.cmake
doc/: dev.md
scons/: build.py  file.py
scons/extension/: build.py
scons/tools/: __init__.py  build.py  file.py
scons_support/: __init__.py
src/: main.gd  main.tscn
src/extensions/: CMakeLists.txt
src/extensions/bar/: bar.cpp  bar.hpp  bar.xml  register_types.cpp  register_types.hpp
src/extensions/foo/: foo.cpp  foo.hpp  foo.xml  register_types.cpp  register_types.hpp
tools/scons/: __init__.py  build.py  file.py
